--- a/wbs-alarm/wbs-frontend/src/index.html
+++ b/wbs-alarm/wbs-frontend/src/index.html
@@ -1,14 +1,13 @@
 <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Wbs</title>
-  <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+<html lang="de">
+    <head>
+        <title>WBS Kleiderkammer</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
+    <body class="theme-core theme-dark">
+        <app-terra-basic>
+            Loading...
+        </app-terra-basic>
+    </body>
 </html>
