--- a/wbs-alarm/wbs-frontend/src/index.html
+++ b/wbs-alarm/wbs-frontend/src/index.html
@@ -4,6 +4,7 @@
         <title>WBS Kleiderkammer</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <base href="/">
     </head>
     <body class="theme-core theme-dark">
         <app-terra-basic>
