- fixed behaviour of login guard

--- a/wbs-alarm/wbs-frontend/src/index.html
+++ b/wbs-alarm/wbs-frontend/src/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="de">
+<html lang="de" id="html">
     <head>
         <title>WBS Kleiderkammer</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <base href="/">
     </head>
-    <body class="theme-core theme-dark">
+    <body id="body" class="theme-core theme-dark">
         <app-terra-basic>
             Loading...
         </app-terra-basic>
